# PQC-Hub

./: .gitignore  README.md  install.bat  install.sh  pyproject.toml  requirements.txt
backend/: no_of_lines.py
backend/src/: blockchain.py  config.py  dilithium.py  encryption.py  key_derivation.py  kyber.py  local_database.py  main.py  mnemonics.py  models.py  p2p_node.py  peer_discovery.py  protocol.py
backend/src/routes/: accounts_route.py  blockchain_route.py  messages_route.py  p2p_route.py  tests_route.py  validators_route.py
frontend/: package-lock.json  package.json
frontend/src/app/: page.tsx
frontend/src/components/: AnimatedBackground.tsx  ChatArea.tsx  ChatInterface.tsx  ChatInterface_demo_display.tsx  ContactsSidebar.tsx  KeyDisplay.tsx  RegisterScreen.tsx
tests/dilithium_identity/: README.md  test_dilithium.py
tests/http_chat/: server.py
tests/http_chat/static/: index.html
tests/kyber_key_share/: test_kyber.py
tests/p2p_network/: README.md  node.py  peer_discovery.py
tests/p2p_sync/: block2.json  node.py
tests/tls_implementation/: README.md  cert_utils.py  test_tls_conn.py  tls_node.py
utils/: check_port.ps1  start_client1.bat  start_client2.bat
