[project]
name = "PQC-Hub"
version = "0.1.0"
description = "FastAPI blockchain secured with ML-KEM-512 and CRYSTALS-Kyber512"
authors = [
    {name = "LunaLynx12"},
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GPL-3.0 License",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.3",
    "pydantic==2.11.5",
    "kyber-py==1.0.1",
    "websockets==15.0.1",
    "cryptography==45.0.3",
    "requests>=2.31.0",
    "dilithium-py==1.1.0",
    "pycryptodome==3.23.0",
    "aiohttp==3.12.9",
    "anyio==4.9.0",
    "starlette==0.46.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "flake8>=6.1.0",
    "black>=23.11.0",
    "isort>=5.12.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]